welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: illegal start of simple pattern
if (n<21)
^diff21:4: error: '=' expected but ';' found.
{21 - n}
^diff21:5: error: ';' expected but 'else' found.
else {2*(n-21)}
^