welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
var
if (n<21)
{21 - n}
else {2*(n-21)}
}